<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SeeXian</string>
    <string name="app_icon_name">SeeXian</string>
    <string name="action_settings">Settings</string>
    
    <string name="image_title">See Xian</string>
    <string name="divider_title">divider</string>
    
    <string name="location_warn_info">See Xian needs access to your location. Please turn on Location Service.</string>
    <string name="settings">Settings</string>
    <string name="skip">Skip</string>
    <string name="cancel">Cancel</string>
    
    <string name="network_warn">Turn on Network</string>
    <string name="network_warn_info">See Xian needs access to network. Please turn on Wi-Fi or Mobile data.</string>
    
    <string name="help_content_image_name">Help content</string>
    
    <string name="landscape_pic_name">Landscape Picture</string>
    <string name="icon_pic_name">Icon Picture</string>
    
    <string name="wiki_pic_name">Wiki</string>
    
    <string name="empty_text">No data</string>
    <string name="loading">Loading&#8230;</string>
    
    <string name="wiki">Wiki</string>
    
    <string name="introduction">Introduction</string>
    
    <string name="post">Post</string>
    
    <string name="plz_login_sina">Please login Sina Weibo</string>
    
    <string name="login_success">Login to Sina Weibo success</string>
    
    <string name="post_success">Post to Sina Weibo success</string>
    
    <string name="post_fail">Post to Sina Weibo fail</string>
    
    <string name="upload">Uploading: </string>
    
    <string name="month">/</string>
    
    <string name="day"></string>
    
    <string name="last_update">Latest update</string>
    
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing&#8230;</string>
    
    <string name="delete_item">Delete item</string>
    
    <string name="xian">Xi\'an</string>
    <string name="distance_to">Distance to</string>

    <string name="kilometer">km</string>
    
    <string name="name">Name</string>
    <string name="tel">Telephone</string>
    <string name="addr">Address</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="link">Link</string>
    
</resources>