<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/network_warn"
        android:textColor="#ff6f0420"
        android:textSize="23sp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#ff6f0420"
        android:contentDescription="@string/divider_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/network_warn_info"
        android:textColor="@android:color/black"
        android:textSize="19.33sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/net_cancel"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/common_btn_bg"
            android:text="@string/cancel"
            android:textColor="#ff6f0420"
            android:textSize="19.33sp" />

        <Button
            android:id="@+id/net_settings"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/common_btn_bg"
            android:text="@string/settings"
            android:textColor="#ff6f0420"
            android:textSize="19.33sp" />
    </LinearLayout>

</LinearLayout>